# fractale

./: .clang-format  CMakeLists.txt  CMakeSettings.json  README.md
geometry_fractal/: CMakeLists.txt  fractal.cpp  fractal.h  main.cpp
mandelbrot_fractal/: CMakeLists.txt  debugging.h  fixed128.h  large_number.cpp  large_number.h  main.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrot_plain.cpp  palette.h  pool.h
